--- a/hood/templates/dashboard/business.html
+++ b/hood/templates/dashboard/business.html
@@ -49,8 +49,8 @@
                     <tr>
                         <th scope="row">1</th>
                         <td>Jos Shop</td>
-                        <td>Lucy</td>
-                        <td>@laap</td>
+                        <td>Mech</td>
+                        <td>Local Shop</td>
                         <td>
                             <a class="btn btn-info btn-sm" href="">Edit</a>
                             <a class="btn btn-danger btn-sm" href="">Delete</a>
@@ -58,9 +58,9 @@
                     </tr>
                     <tr>
                         <th scope="row">2</th>
-                        <td>James</td>
-                        <td>Allan</td>
-                        <td>@ooaaa</td>
+                        <td>Jane Mechanic</td>
+                        <td>Zooe</td>
+                        <td>Mechanic</td>
                         <td>
                             <a class="btn btn-info btn-sm" href="">Edit</a>
                             <a class="btn btn-danger btn-sm" href="">Delete</a>
@@ -68,9 +68,9 @@
                     </tr>
                     <tr>
                         <th scope="row">3</th>
-                        <td>Lance</td>
-                        <td>Williamz</td>
-                        <td>@twitter</td>
+                        <td>La Shopping Mall</td>
+                        <td>Laaaa</td>
+                        <td>Shopping Mall</td>
                         <td>
                             <a class="btn btn-info btn-sm" href="">Edit</a>
                             <a class="btn btn-danger btn-sm" href="">Delete</a>
