--- a/hood/templates/dashboard/user.html
+++ b/hood/templates/dashboard/user.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base.html' %}
-{% block title %}Staff Page{% endblock %}
+{% block title %}User Page{% endblock %}
 
 {% block content %}
 
